pkglib_LTLIBRARIES = libmdb.la

libmdb_la_CFLAGS = -I../include

libmdb_la_SOURCES = ../include/murphy-db/assert.h \
                    ../include/murphy-db/list.h \
                    ../include/murphy-db/handle.h \
                    ../include/murphy-db/hash.h \
                    ../include/murphy-db/sequence.h \
                    ../include/murphy-db/mqi-types.h \
                    ../include/murphy-db/mdb.h \
                    list.h handle.c hash.c sequence.c mqi-types.c \
                    column.h column.c \
                    cond.h cond.c \
                    index.h index.c \
                    log.h log.c \
                    row.h row.c \
                    table.h table.c \
                    transaction.h transaction.c \
                    trigger.h trigger.c
